# croppy

./: .gitignore  README.md  lefthook.yml  pixi.toml  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: clip.md  combine.md  compress.md  credits.md  encoding.md  faq.md  index.md  install.md  output-and-jobs.md
docs/stylesheets/: extra.css
scripts/: screenshots.py
src/croppy/: __init__.py  __main__.py  app.py  cli.py  config.py  logging.py  models.py  preset.py  resources.py  timecode.py  timestamps.py
src/croppy/ffmpeg/: __init__.py  binary.py  clip.py  combine.py  compress.py  crop.py  encoder.py  frame.py  preview.py  probe.py
src/croppy/gui/: canvas.py  clip_tab.py  combine_tab.py  compress_tab.py  compression_panel.py  constants.py  crop_item.py  crop_tab.py  drop_hint.py  editor.py  jobs_panel.py  landing.py  main_window.py  media_loader.py  output_picker.py  progress_panel.py  settings_panel.py  settings_tab.py  status_flash.py  status_strip.py  theme.py  trim_panel.py  video_list.py
src/croppy/jobs/: __init__.py  job.py  queue.py  worker.py
tests/: conftest.py  test_cli_smoke.py  test_clip_command.py  test_clip_tab.py  test_combine_command.py  test_compress_command.py  test_compression.py  test_config.py  test_crop_command.py  test_crop_item.py  test_crop_tab.py  test_editor.py  test_editor_layout.py  test_encoder.py  test_ffmpeg_binary.py  test_ffmpeg_frame.py  test_ffmpeg_probe.py  test_job_queue.py  test_jobs.py  test_jobs_panel.py  test_landing.py  test_models.py  test_multibox.py  test_output_panel.py  test_preset.py  test_progress_panel.py  test_resources.py  test_settings_panel.py  test_tabs.py  test_timecode.py  test_timestamps.py  test_video_list.py
tools/: generate_icons.py
