[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "croppy"
version = "0.1.0"
description = "Visual GUI for drawing crop boxes on a video and producing cropped output files via ffmpeg."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Mikkel Roald-Arbøl", email = "github.ggb9a@simplelogin.co" },
]
keywords = ["video", "crop", "ffmpeg", "gui", "qt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "PySide6>=6.7",
    "typer>=0.12",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4",
]

[project.scripts]
croppy = "croppy.cli:app"

[project.urls]
Homepage = "https://github.com/roaldarbol/croppy"

[tool.hatch.build.targets.wheel]
packages = ["src/croppy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
