[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "croppy"
version = "0.4.0"
description = "Visual GUI for cropping, combining, and compressing videos via ffmpeg."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Mikkel Roald-Arbøl", email = "github.ggb9a@simplelogin.co" },
]
keywords = ["video", "crop", "ffmpeg", "gui", "qt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "PySide6>=6.7",
    "typer>=0.12",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4",
    "ruff>=0.6",
]

[project.scripts]
croppy = "croppy.cli:app"

[project.urls]
Homepage = "https://github.com/roaldarbol/croppy"

[tool.hatch.build.targets.wheel]
packages = ["src/croppy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["pixi.lock", ".pixi"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "B008",   # function call in arg default — required by typer's Annotated / Argument / Option pattern
    "E501",   # line length — leave to the formatter
    "SIM108", # ternary suggestions — noisy and often less readable
    "RUF001", # ambiguous-unicode in strings — we use × deliberately in UI labels
    "RUF002", # same, but for docstrings
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # `assert False` is fine in tests

[tool.ruff.format]
quote-style = "double"
